--- a/PsFacebookMobile.uplugin
+++ b/PsFacebookMobile.uplugin
@@ -17,7 +17,7 @@
 		{
 			"Name": "PsFacebookMobile",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "PreDefault"
 		}
 	]
 }
